k8s-rewrite/charts/nginx-hello/ingress.yaml
# nginx-hello Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello-ingress
  namespace: nginx-hello
spec:
  rules:
  - host: nginx-hello.branconet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-hello
            port:
              number: 80
