k8s-rewrite/charts/nginx-hello/ingressroute.yaml
# Traefik IngressRoute for nginx-hello
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-hello-ingress
  namespace: nginx-hello
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`nginx-hello.branconet.local`)
    kind: Rule
    services:
    - name: nginx-hello
      port: 80
